# coworker

./: Cargo.toml  README.md
.agent-hive/: name
.claude-peers/: name
.github/workflows/: release.yml
.jarmcp/: index.db-shm  index.db-wal
src/: main.rs
