[package]
name = "coworker"
version = "0.1.3"
edition = "2024"
description = "Lightweight MCP server for claude-peers network"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls"], default-features = false }
hostname = "0.4"
dirs = "6"
zip = { version = "2", features = ["deflate"] }
walkdir = "2"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
